-fix error message & layout problem

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -41,3 +41,7 @@
   bottom: 0;
   left: 0;
 }
+
+.height-fit-content {
+  height: fit-content;
+}
